--- a/index.html
+++ b/index.html
@@ -33,6 +33,7 @@
       </div>
     </div>
   </div>
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.6.0/gsap.min.js"></script>
 </body>
 
 </html>
