--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <html>
-
+<link href="https://fonts.googleapis.com/css?family=Sofia" rel="stylesheet" />
 <body class="scissors">
   <div class="envelop">
     <div class="envelop__front-paper"></div>
