--- a/index.html
+++ b/index.html
@@ -1,5 +1,8 @@
 <html>
-<link href="https://fonts.googleapis.com/css?family=Sofia" rel="stylesheet" />
+  <head>
+    <link href="https://fonts.googleapis.com/css?family=Sofia" rel="stylesheet" />
+  </head>
+
 <body class="scissors">
   <div class="envelop">
     <div class="envelop__front-paper"></div>
