--- a/index.html
+++ b/index.html
@@ -1,6 +1,7 @@
 <html>
   <head>
     <link href="https://fonts.googleapis.com/css?family=Sofia" rel="stylesheet" />
+    <link rel="stylesheet" href="styles.css">
   </head>
 
 <body class="scissors">
