--- a/index.html
+++ b/index.html
@@ -38,6 +38,7 @@
     </div>
   </div>
   <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.6.0/gsap.min.js"></script>
+  <script src="script.js"></script>
 </body>
 
 </html>
